// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`applyTheme > with baseThemeId > attaches one style node containing overrides with the correct theme selector 1`] = `
".secondary-theme.secondary-theme:not(#\\9){
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--boxShadow-css:black;
	--lineShadow-css:pink;
}}
.secondary-theme.secondary-theme .navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
.navigation.navigation.secondary-theme:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme .navigation:not(#\\9){
	--shadow-css:grey;
	--buttonShadow-css:green;
	--boxShadow-css:black;
	--lineShadow-css:pink;
}}
@media not print {.dark.dark.navigation.secondary-theme:not(#\\9){
	--shadow-css:grey;
	--buttonShadow-css:green;
	--boxShadow-css:black;
	--lineShadow-css:pink;
}}"
`;

exports[`applyTheme > with secondary theme > attaches one style node containing override 1`] = `
":root:root{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--boxShadow-css:brown;
	--lineShadow-css:pink;
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}}"
`;

exports[`applyTheme > with targetDocument > attaches one style node containing override on the target document 1`] = `
":root:root{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--boxShadow-css:brown;
	--lineShadow-css:pink;
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}}"
`;

exports[`applyTheme > without secondary theme > attaches one style node containing override 1`] = `
":root:root{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--boxShadow-css:brown;
	--lineShadow-css:pink;
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}}"
`;

exports[`generateThemeStylesheet > with baseThemeId > creates override styles 1`] = `
".secondary-theme.secondary-theme:not(#\\9){
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--boxShadow-css:black;
	--lineShadow-css:pink;
}}
.secondary-theme.secondary-theme .navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
.navigation.navigation.secondary-theme:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark.secondary-theme .navigation:not(#\\9){
	--shadow-css:grey;
	--buttonShadow-css:green;
	--boxShadow-css:black;
	--lineShadow-css:pink;
}}
@media not print {.dark.dark.navigation.secondary-theme:not(#\\9){
	--shadow-css:grey;
	--buttonShadow-css:green;
	--boxShadow-css:black;
	--lineShadow-css:pink;
}}"
`;

exports[`generateThemeStylesheet > with secondary theme > creates override styles 1`] = `
":root:root{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--boxShadow-css:brown;
	--lineShadow-css:pink;
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}}"
`;

exports[`generateThemeStylesheet > without secondary theme > creates override styles 1`] = `
":root:root{
	--shadow-css:yellow;
	--buttonShadow-css:red;
	--boxShadow-css:green;
	--lineShadow-css:pink;
}
@media not print {.dark.dark:not(#\\9){
	--shadow-css:orange;
	--buttonShadow-css:red;
	--boxShadow-css:brown;
	--lineShadow-css:pink;
}}
.navigation.navigation:not(#\\9){
	--shadow-css:pink;
	--buttonShadow-css:red;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}
@media not print {.dark.dark .navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}}
@media not print {.dark.dark.navigation:not(#\\9){
	--shadow-css:brown;
	--buttonShadow-css:green;
	--boxShadow-css:purple;
	--lineShadow-css:pink;
}}"
`;
